# psych_aiogram_bot

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yaml  docker-compose.prod.yaml  pyproject.toml
bot/: __main__.py  loader.py
bot/config/: __init__.py  constants.py
bot/config/bot/: __init__.py
bot/config/components/: __init__.py
bot/filters/: __init__.py  active_subscription.py  advanced_command.py  exist_user.py  is_activated.py  is_admin.py  is_superadmin.py
bot/handlers/: __init__.py  exception.py  exception_factory.py  other.py
bot/handlers/admin/: __init__.py  admin.py  callback_factory.py
bot/handlers/buy/: __init__.py  buy.py  callback.py  callback_factory.py  exception.py  exception_factory.py
bot/handlers/canceled_subscription/: __init__.py  callback_factory.py  canceled_subscription.py
bot/handlers/choose_name/: __init__.py  callback_factory.py  choose_name.py  exception.py  exception_factory.py  state.py  state_factory.py
bot/handlers/diary/: __init__.py  callback.py  (+7 more)
bot/locales/: messages.pot
bot/middlewares/: __init__.py  database.py  scheduler.py  subscription.py  user.py
bot/repository/: __init__.py
infrastructure/cache/: __init__.py  abc.py  cache.py
infrastructure/database/: __init__.py  abc.py  database.py  mixins.py
resource/: anxiety.MOV  dot1.m4a  dot10.m4a  dot11.m4a  dot12.m4a  dot13.m4a  dot14.m4a  dot15.m4a  dot2.m4a  dot3.m4a  dot4.m4a  dot5.m4a  dot6.m4a  dot7.m4a  dot8.m4a  dot9.m4a  hard1.m4a  hard2.m4a  hard3.m4a  hard4.m4a  norm1.m4a  norm2.m4a  norm3.m4a  norm4.m4a  norm5.m4a
(+157 files in other folders)
