[project]
name = "psychological_bot"
version = "1.0.0"
description = "Telegram bot with exercises approved by psychologists"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram[i18n]>=3.20.0.post0",
    "alembic>=1.15.2",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "redis>=6.1.0",
    "sqlalchemy>=2.0.40",
]
